objects/EXPRN__Owner_Guarantor_Lead_and_Opp__c.object
<CustomObject>
    <description>Owner guarontor object for Lead and Opportunity</description>
    <fields>
        <fullName>EXPRN__Address_Information_Ld__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Information</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Age__c</fullName>
        <label>Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Age_of_oldest_trade_Ld__c</fullName>
        <defaultValue>&apos;0 MO&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Age of oldest trade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Available_rev_crdt_reprtd_last_6mnth_Ld__c</fullName>
        <defaultValue>&apos;$0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Available rev credit reported last 6mnth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Bnkcrd_bal_to_lmt_ratio_last_6mnth_Ld__c</fullName>
        <defaultValue>&apos;0%&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Bankcard bal to limit ratio last 6mnth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Collections_lgl_filngs_or_derog_accts_Ld__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Collections,legal filings or derog accts</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_inquiries_last_6_months_Ld__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit inquiries last 6 months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Derog_pblic_records_filed_wthn_24mnth_Ld__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Derog public records filed within 24mnth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Derog_public_record_greater_than_250_Ld__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Derog public record greater than $250</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Driver_s_License__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Driver&apos;s License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to lead object</description>
        <label>Experian Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Owner Guarantor- Lead</relationshipLabel>
        <relationshipName>Owner_Guarantor_Lead_and_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Opp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Experian Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Owner Guarantor- Opportunity</relationshipLabel>
        <relationshipName>Owner_Guarantor_Lead_and_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__FCRA_Bankruptcy_Report_CHAP11_Ld__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>FCRA Bankruptcy Report CHAP11</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__FCRA_Bankruptcy_Report_CHAP12_Ld__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>FCRA Bankruptcy Report CHAP12</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__FCRA_Bankruptcy_Report_CHAP13_Ld__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>FCRA Bankruptcy Report CHAP13</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Fraud_Shield_1_Ld__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Fraud Shield 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Fraud_Shield_2_Ld__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Fraud Shield 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Fraud_Shield_3_Ld__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Fraud Shield 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Fraud_Statement_Ld__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Fraud Statement</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Generation_code__c</fullName>
        <label>Generation code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>JR</fullName>
                </value>
                <value>
                    <fullName>SR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__In_dispute_Ld__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In dispute</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Inquiries_previous_6_months_Ld__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inquiries previous 6 months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Last_Pull_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Pull Profile</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Middle_Initial__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Initial</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Monthly_payments_Ld__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Monthly payments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Oldest_trade_opened_Ld__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Oldest trade opened</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Open_bnkcrd_trades_reprtd_last_6mnth_Ld__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Open bankcard trades reported last 6mnth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Open_revolving_trades_Ld__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Open revolving trades</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Score_Type_Ld__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner Score Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Paid_trades_Ld__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Paid trades</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Past_due_amount_Ld__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Past due amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Pct_auto_lease_trade_30day_delinquent_Ld__c</fullName>
        <defaultValue>&apos;0%&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Prcnt auto lease trade 30+day delinquent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Pct_real_estate_trd_30days_delinquent_Ld__c</fullName>
        <defaultValue>&apos;0%&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Prcnt real estate trd 30days+ delinquent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Presently_delinquent_derogatory_Ld__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Presently delinquent/derogatory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Previously_delinquent_derogatory_Ld__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Previously delinquent/derogatory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Profile_Pull_Day__c</fullName>
        <formula>Today() -  EXPRN__Last_Pull_Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Pull Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Satisfactory_Trades_Last_24_Months_Ld__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Satisfactory Trades Last 24 Months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Satisfactory_trades_Ld__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Satisfactory trades</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Scorex_plus_score_Ld__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Scorex plus score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Social_Sec_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Social Sec No.</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>WV</fullName>
                </value>
                <value>
                    <fullName>WY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Total_legal_filings_Ld__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total legal filings</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_number_of_inquiries_Ld__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Total number of inquiries</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_trades_Ld__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total trades</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Trade_prsntly_delinquent_last_6months_Ld__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Trades presently delinquent last 6months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Year_of_birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year of birth</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Owner Guarantor- Lead and Opportunity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Owner Guarantor- Lead and Opportunity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>